--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <html>
 	<head></head>
 	<body>
+		
+		
 		<h2>Testando o Github</h2>
+		
+		
 		<hr/>
+		
+		<form method="" action="">
 		
 		<li>Alteracao 1</li>
 		<li>Alteracao 2</li>
-		<li>Alteracao 3</li>
+		
 		
 		<a href="cadastro.html">Cadastro</a>
 		<a href="consulta.html">Consulta</a>
 		
 		
+		</form>
 	
 	</body>
 
