--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 		<hr/>
 		
-		<form method="" action="">
+		<form method="post" action="Controle?cmd=cadastrar">
 		
 		<li>Alteracao 1</li>
 		<li>Alteracao 2</li>
