alteracoes nos 2 arquivos

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		
 		<h2>Testando o Github</h2>
 		
-		
 		<hr/>
+
+		<fieldset name="git">		
+
 		
 		<form method="post" action="Controle?cmd=cadastrar">
 		
@@ -17,6 +19,8 @@
 		<a href="cadastro.html">Cadastro</a>
 		<a href="consulta.html">Consulta</a>
 		
+		</fieldset>
+
 		
 		</form>
 	
