--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		
 		<a href="cadastro.html">Cadastro</a>
 		<a href="consulta.html">Consulta</a>
+
+		<link rel="stylesheet" type="text/css" href="/design.css"/>
+
 		
 		</fieldset>
 
