adicionando estilo a pagina

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 		<fieldset name="git">		
 
 		
+		
 		<form method="post" action="Controle?cmd=cadastrar">
+		
 		
 		<li>Alteracao 1</li>
 		<li>Alteracao 2</li>
 		
+		<link rel="stylesheet" type="text/css" href="/design.css"/>
 		
 		<a href="cadastro.html">Cadastro</a>
 		<a href="consulta.html">Consulta</a>
