--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li>Alteracao 180</li>
 		
 		
-		<a href="cadastro.html">Cadastro</a>
+		<a href="jeanlevy.html">Cadastro</a>
 		
 		
 		<br />
