--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<li>Alteracao 180</li>
 		
 		
-		<a href="cadastro.html">Cadastro</a>
+		
+		<a href="jeansavoir.html">Cadastro</a>
 		
 		
 		<br />
